Closed Bug 1693661 Opened 4 years ago Closed 4 years ago

MOZ_RELEASE_ASSERT instead of failing gracefully if we fail to allocate when deserializing ByteBuf

Categories

(Core :: IPC, defect)

defect

Tracking

()

RESOLVED FIXED
88 Branch
Tracking Status
firefox88 --- fixed

People

(Reporter: jrmuizel, Assigned: jrmuizel)

References

Details

Attachments

(1 file)

No description provided.

In bug 1691415 we're getting failures to deserialize. It would be
nice to move these closer to the source so that we can better understand
what's going on.

Blocks: 1691415
Summary: MOZ_RELEASE_ASSERT instead of failing gracefully if we fail to allocate. → MOZ_RELEASE_ASSERT instead of failing gracefully if we fail to allocate when deserializing ByteBuf
Attachment #9204067 - Attachment description: Bug 1693661 - MOZ_RELEASE_ASSERT instead of failing gracefully if we fail to allocate. → Bug 1693661 - Use mozalloc_handle_oom instead of failing gracefully if we fail to allocate.
Pushed by jmuizelaar@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/855b673d627b Use mozalloc_handle_oom instead of failing gracefully if we fail to allocate. r=jld
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 88 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: