Bug 1693661 - Use mozalloc_handle_oom instead of failing gracefully if we fail to allocate. r=jld

In bug 1691415 we're getting failures to deserialize. It would be
nice to move these closer to the source so that we can better understand
what's going on.

Differential Revision: https://phabricator.services.mozilla.com/D105688